<resources>
    <string name="app_name">Expenses Tracking</string>
    <string name="search">Pesquise aqui o seu cartão</string>
    <string name="my_card">Numero do cartão</string>
    <string name="balance">Balanço</string>
    <string name="number_card">**** 5471</string>
    <string name="value_balance">$ 56,215</string>
    <string name="entry">Entrada</string>
    <string name="expenses">Saídas</string>
    <string name="value_entry">$ 75,000</string>
    <string name="value_expenses">$ 18,785</string>
    <string name="all">Todos</string>
    <string name="custom">Customizado</string>
    <string name="today">Hoje</string>
    <string name="yesterday">Ontem</string>
    <string name="laste_week">Ultima semana</string>
    <string name="fitfteen_days">15 dias</string>
    <string name="soma">+</string>
    <string name="item_lista_1">JK Hotel and CO</string>
    <string name="category_item_list">Comida</string>
    <string name="category_item_list_2">Outros</string>
    <string name="item_list_2">Investimento</string>
    <string name="item_list_3">Energia eletrica</string>
    <string name="category_list_item">Gastos</string>
    <string name="value_invest">- $ 3,000</string>
    <string name="value_2">+ $4,500</string>
    <string name="item_value_2">- $1000</string>
    <string name="other_date">16 Abril</string>
    <string name="report">Report</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_card_button">Add Card Button</string>
    <string name="numero_do_cartao">Número do Cartão</string>
    <string name="saldo_inicial">Saldo Inicial</string>
</resources>