<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#263238"
    android:padding="8dp">
<!--Barra pesquisa-->
    <EditText
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:drawableStart="@drawable/ic_search"
        android:hint="@string/search"
        android:textColorHint="#555e63"
        android:textColor="@color/white"/>

<!-- Btn pesquisa-->
    <Button
        android:id="@+id/search_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignEnd="@+id/search_bar"
        android:backgroundTint="#476aeb"
        android:padding="8dp"
        android:text="@string/soma" />

<!--Card com infos-->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:backgroundTint="#415159"
        app:cardCornerRadius="16dp">

        <RelativeLayout
            android:id="@+id/box_values_cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/number_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/my_card"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/card_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/number_card"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/number_card"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/balance"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/balance_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/balance"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/value_balance"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/balance_value"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:text="@string/entry"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/entry_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/entry"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                android:text="@string/value_entry"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/ic_seta_cima" />

            <TextView
                android:id="@+id/expenses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/balance_value"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="16dp"
                android:text="@string/expenses"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/expense_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/entry"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/value_expenses"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/ic_seta_baixo" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

<!--filtros-->
    <RelativeLayout
        android:id="@+id/layout_scroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardView">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:scrollbars="none">

            <RelativeLayout
                android:id="@+id/layot_scroll"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp">

                <!--todos-->
                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView_all"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:backgroundTint="#476aeb"
                    app:cardCornerRadius="16dp">

                    <TextView
                        android:id="@+id/all"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/all"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </androidx.cardview.widget.CardView>

                <!--Customizado-->
                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView_custom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_toRightOf="@id/cardView_all"
                    android:backgroundTint="#313c42"
                    app:cardCornerRadius="16dp">

                    <TextView
                        android:id="@+id/custom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/custom"
                        android:textColor="#798084"
                        android:textSize="16sp" />
                </androidx.cardview.widget.CardView>

                <!--hoje-->
                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView_today"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_toRightOf="@id/cardView_custom"
                    android:backgroundTint="#313c42"
                    app:cardCornerRadius="16dp">

                    <TextView
                        android:id="@+id/today"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/laste_week"
                        android:textColor="#798084"
                        android:textSize="16sp" />


                </androidx.cardview.widget.CardView>

                <!--Ontem-->
                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView_yesterday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_toRightOf="@id/cardView_today"
                    android:backgroundTint="#313c42"
                    app:cardCornerRadius="16dp">

                    <TextView
                        android:id="@+id/yesterday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/yesterday"
                        android:textColor="#798084"
                        android:textSize="16sp" />
                </androidx.cardview.widget.CardView>

                <!--Ultima semana-->
                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView_last_week"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_toRightOf="@id/cardView_yesterday"
                    android:backgroundTint="#313c42"
                    app:cardCornerRadius="16dp"
                    android:layout_marginEnd="16dp">

                    <TextView
                        android:id="@+id/last_week"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/laste_week"
                        android:textColor="#798084"
                        android:textSize="16sp" />
                </androidx.cardview.widget.CardView>

            </RelativeLayout>


        </HorizontalScrollView>

    </RelativeLayout>

<!--Lista -->
</RelativeLayout>